crates/rome_js_formatter/tests/specs/prettier/js/numeric-separators/number.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: number.js

---
# Input
```js
// https://github.com/babel/babel/pull/11854

a = 09e1_1;
a = 09.1_1;

```

# Output
```js
// https://github.com/babel/babel/pull/11854

a = 09e1_1;
a = 09.1_1;

```

# Errors
```
error[SyntaxError]: Decimals with leading zeros are not allowed in strict mode.
  ┌─ number.js:3:5
  │
3 │ a = 09e1_1;
  │     ^^^^^^

error[SyntaxError]: Decimals with leading zeros are not allowed in strict mode.
  ┌─ number.js:4:5
  │
4 │ a = 09.1_1;
  │     ^^^^^^

error: unexpected number
  ┌─ number.js:4:5
  │
4 │ a = 09.1_1;
  │     ^^^


```


